# JsonResolver

./: CMakeLists.txt  README.md
cmake/: json_fragments-config.cmake.in
include/json_fragments/: dependency_tracker.hpp  exceptions.hpp  fragment_implementations.hpp  fragment_nodes.hpp  json_resolver.hpp
src/: json_resolver.cpp
tests/: CMakeLists.txt  test_json_resolver.cpp
